--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Skolan
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:r7owHN2rjM5Y1jkG8MxOk4o+LqlKQzZPNK9+cYWPhlw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,14 +9,15 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=skolan_db
+DB_USERNAME=username
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+SESSION_CONNECTION=session
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
