--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "cmgmyr/messenger": "^2.16",
+        "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laracasts/flash": "^3.0",
@@ -16,7 +17,8 @@
         "laraveles/spanish": "^1.1",
         "predis/predis": "^1.1",
         "spatie/laravel-activitylog": "^3.1",
-        "spatie/laravel-permission": "^2.23"
+        "spatie/laravel-permission": "^2.23",
+        "tightenco/ziggy": "^0.6.9"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
