--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
+        "popper.js": "^1.14.5",
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "@coreui/coreui": "^2.0.20",
-        "perfect-scrollbar": "^1.4.0"
+        "@coreui/coreui": "^2.1.0",
+        "perfect-scrollbar": "^1.4.0",
+        "vue-toasted": "^1.1.25"
     }
 }
