--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     },
     "dependencies": {
         "@coreui/coreui": "^2.1.0",
+        "laravel-vue-pagination": "^2.2.0",
+        "moment": "^2.22.2",
         "perfect-scrollbar": "^1.4.0",
-        "vue-toasted": "^1.1.25"
+        "sweetalert": "^2.1.2",
+        "vue-content-placeholders": "^0.2.1",
+        "vue-moment": "^4.0.0",
+        "vue-multiselect": "^2.1.3",
+        "vue-toasted": "^1.1.25",
+        "vuejs-datepicker": "^1.5.4"
     }
 }
