--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "predis/predis": "^1.1",
         "spatie/laravel-activitylog": "^3.1",
         "spatie/laravel-permission": "^2.23",
-        "tightenco/ziggy": "^0.6.9"
+        "tightenco/ziggy": "^0.6.9",
+        "waavi/sanitizer": "~1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
