--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue-moment": "^4.0.0",
         "vue-multiselect": "^2.1.3",
         "vue-toasted": "^1.1.25",
+        "vue2-editor": "^2.6.6",
         "vuejs-datepicker": "^1.5.4"
     }
 }
