--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_CONNECTION=session
 QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -30,6 +31,11 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
