--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.14.5",
-        "vue": "^2.5.7"
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@coreui/coreui": "^2.1.0",
-        "laravel-vue-pagination": "^2.2.0",
-        "moment": "^2.22.2",
+        "@coreui/coreui": "^2.1.9",
+        "laravel-vue-pagination": "^2.3.0",
+        "moment": "^2.24.0",
         "perfect-scrollbar": "^1.4.0",
         "sweetalert": "^2.1.2",
         "vue-content-placeholders": "^0.2.1",
         "vue-moment": "^4.0.0",
-        "vue-multiselect": "^2.1.3",
-        "vue-toasted": "^1.1.25",
+        "vue-multiselect": "^2.1.4",
+        "vue-toasted": "^1.1.26",
         "vue2-editor": "^2.6.6",
         "vuejs-datepicker": "^1.5.4"
     }
