--- a/composer.json
+++ b/composer.json
@@ -5,29 +5,27 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "cmgmyr/messenger": "^2.18",
+        "php": "^7.2",
+        "arcanedev/laravel-messenger": "^7.0",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8",
-        "laraveles/spanish": "^1.2",
+        "laravelcollective/html": "^6.0",
+        "laraveles/spanish": "^1.3",
         "predis/predis": "^1.1",
         "spatie/laravel-activitylog": "^3.6",
-        "spatie/laravel-permission": "^2.37",
-        "tightenco/ziggy": "^0.7.1",
-        "waavi/sanitizer": "~1.0"
+        "spatie/laravel-permission": "^3.0",
+        "tightenco/ziggy": "^0.8.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "classmap": [
