--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "tightenco/ziggy": "^0.8.0"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^1.4",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
