--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,11 @@ DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_CONNECTION=session
 QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -36,6 +36,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+AWS_DEFAULT_REGION=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
